force-app/main/default/objects/KimbleOne__DeliveryGroupStatusSummary__c/KimbleOne__DeliveryGroupStatusSummary__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Delivery Group Status Summary</label>
    <nameField>
        <label>DeliveryGroupStatusSummary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Group Status Summaries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>