force-app/main/default/objects/KimbleOne__DeliveryGroupStatusSummary__c/fields/KimbleOne__DeliveryStatus__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryStatus__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Summary Status</label>
    <referenceTo>KimbleOne__DeliveryStatus__c</referenceTo>
    <relationshipLabel>Delivery Group Status Summaries</relationshipLabel>
    <relationshipName>DeliveryGroupStatusSummaries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>