force-app/main/default/objects/KimbleOne__DeliveryGroupStatusSummary__c/fields/KimbleOne__IsLatest__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsLatest__c</fullName>
    <formula>(KimbleOne__DeliveryGroup__r.KimbleOne__DeliveryGroupStatusSummary__c = Id) || (KimbleOne__DeliveryGroup__r.KimbleOne__CustomerDeliveryGroupStatusSummary__c = Id)</formula>
    <label>Is Latest</label>
    <type>Checkbox</type>
</CustomField>